# NekoCrypt

./: README.md  fileEnc.py  nekocrypt.py  pyproject.toml  setup.py
nekocrypt/: nekocrypt.py
