[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nekocrypt"
version = "0.0.1"
description = "A simple encryption package"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0 License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/caarfken/NekoCrypt"

[project.scripts]
nekocrypt = "nekocrypt.cli:main"
